--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@ h1 {
 }
 
 a {
-    color: whitesmoke;
+    color: rgb(131, 61, 95);
+    font-size: 20px;
 }
 
 h2 {
@@ -22,3 +23,9 @@ h3 {
     color: whitesmoke;
     font-size: 40px;
 }
+
+h4 {
+    color: whitesmoke;
+    font-size: 20px;
+}
+
