--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,12 @@ h1 {
 
 a {
     color: rgb(131, 61, 95);
+    background-color: rgb(214, 119, 151);
     font-size: 20px;
+    font-family: monospace;
     padding-left: 5px;
+    margin: 0%;
+    border-radius: 8%;
 }
 
 h2 {
